--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,13 @@ jobs:
           IMG_REPOSITORY: mkc-ranger-buddies-service
         if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))
         run: |
+          echo "GITHUB_REF=${GITHUB_REF}"
           GIT_TAG=${GITHUB_REF#refs/tags/}
-          echo ${GIT_TAG}
+          echo "GIT_TAG=${GIT_TAG}"
           DOCKER_TAG=${GIT_TAG#refs/heads/master}
-          echo ${DOCKER_TAG}
+          echo "DOCKER_TAG=${DOCKER_TAG}"
           DOCKER_TAG=${DOCKER_TAG#refs/heads/}
-          echo ${DOCKER_TAG}
+          echo "DOCKER_TAG${DOCKER_TAG}"
 
       - name: redeploy lab
         if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')
