--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           DOCKER_TAG=${GIT_TAG#refs/heads/master}
           echo "DOCKER_TAG=${DOCKER_TAG}"
           DOCKER_TAG=${DOCKER_TAG#refs/heads/}
-          echo "DOCKER_TAG${DOCKER_TAG}"
+          echo "DOCKER_TAG=${DOCKER_TAG}"
 
       - name: redeploy lab
         if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')
