--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,10 @@ jobs:
           echo "DOCKER_TAG=${DOCKER_TAG}"
           echo "DOCKER_TAG=${DOCKER_TAG:-latest}"
 
-      - name: redeploy lab
+      - name: redeploy
         if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')
         run: |
-          echo "completed test"
+          echo "completed lab"
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          echo "completed prod"
